--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,9 @@ a {
 
 .container {
     width: 100%;
-    max-width: 1040px;
-    padding-left: 20px;
-    padding-right: 20px;
+    max-width: 1100px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -52,31 +52,35 @@ a {
 
 /* SITE-HEADER */
 .site-header {
-    margin-top: 30px;
-    margin-bottom: 80px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .blog-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .site-logo {
+    margin-right: auto;
+}
+
+.site-logo-img {
+    display: block;
     width: 35px;
     height: 42px;
+    transition: opacity 0.3s ease;
 }
 
-.site-header-main {
-    display: flex;
+.site-logo-img:hover {
+    opacity: 0.8;
 }
 
-.site-header-main {
-    align-items: center;
+.site-logo-img:active {
+    opacity: 0.6;
 }
 
 .sitenav {
-    display: flex;
     margin-right: 40px;
 }
 
@@ -84,6 +88,8 @@ a {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
@@ -98,14 +104,11 @@ a {
     color: #333;
 }
 
-
-.site-help-section {
-    list-style: none;
-    border-bottom: 1px solid #000;
-}
-
-.site-help-section-link {
-    color: #666;
+/* SERCH-FORM */
+.search-form-input {
+    padding: 6px;
+    border: 0;
+    border-bottom: 1px solid #333;
 }
 
 
@@ -140,7 +143,7 @@ a {
 
 .hero-right {
     display: block;
-    width: 387;
+    width: 387px;
     height: 530px;
 }
 
